--- a/src/application/index.org
+++ b/src/application/index.org
@@ -103,7 +103,7 @@ def create_app(config):
     app.register_blueprint(api)
     configure_logging(app)
     configure_errorhandlers(app)
-    app.system = System()
+    #app.system = System()
     #  configure_cors(app)
     # all set; return app object
     return app
